--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   fl_chart: ^0.9.3
   month_picker_dialog: ^0.3.2
   syncfusion_flutter_datepicker: ^18.1.54-beta
+  provider: ^4.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
