--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   month_picker_dialog: ^0.3.2
   syncfusion_flutter_datepicker: ^18.1.54-beta
   provider: ^4.1.2
+  flutter_speed_dial: ^1.2.5
+
 
 
   # The following adds the Cupertino Icons font to your application.
