--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,12 +20,16 @@ version: 1.0.0+1
 environment:
   sdk: ">=2.7.0 <3.0.0"
 
+
+
 dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  flutter_svg: ^0.17.4
+  sqflite: ^1.3.0
+  path_provider: ^1.6.11
+  flutter_svg: ^0.18.0
   fl_chart: ^0.9.3
   month_picker_dialog: ^0.3.2
   syncfusion_flutter_datepicker: ^18.1.54-beta
