--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   syncfusion_flutter_datepicker: ^18.1.54-beta
   provider: ^4.1.2
   flutter_speed_dial: ^1.2.5
+  petitparser: ^3.1.0
 
 
 
